<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/screenBackgroundColor"
    android:paddingHorizontal="@dimen/screenPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_scheme"
            tools:text="SCHEME / NETWORK" />

        <TextView
            android:id="@+id/scheme"
            style="@style/DescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="Visa" />

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_brand"
            tools:text="BRAND" />

        <TextView
            android:id="@+id/brand"
            style="@style/DescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="Visa/Dankort" />

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_card_number"
            tools:text="CARD NUMBER" />

        <TextView
            android:id="@+id/card_length"
            style="@style/DescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="Length - 16" />

        <TextView
            android:id="@+id/lunh"
            style="@style/DescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="LUNH - Yes" />

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_card_type"
            tools:text="TYPE" />

        <TextView
            android:id="@+id/card_type"
            style="@style/DescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="Debit" />

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_prepaid"
            tools:text="PREPAID" />

        <TextView
            android:id="@+id/card_prepaid"
            style="@style/DescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="NO" />

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_country"
            tools:text="COUNTRY" />

        <TextView
            android:id="@+id/country_name"
            style="@style/DescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="🇩🇰 Denmark" />

        <TextView
            android:id="@+id/country_coordinates"
            style="@style/ClickableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="(latitude: 56, longitude: 10)" />

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_bank"
            tools:text="BANK" />

        <TextView
            android:id="@+id/bank_name"
            style="@style/DescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="Jyske Bank, Hjørring" />

        <TextView
            android:id="@+id/bank_url"
            style="@style/ClickableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="www.jyskebank.dk" />

        <TextView
            android:id="@+id/bank_phone"
            style="@style/ClickableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="+4589893300" />
    </LinearLayout>
</ScrollView>